@@ -1,6 +1,8 @@
 ##-*- mode: org -*-
 
 * Very *Urgent*
+** TODO as(m, "sparseMatrix") must work when length(m) > max.int for 'matrix' m
+ -->  "~/R/MM/Pkg-ex/Matrix/large-mat-to-sparse.R"
 ** TODO Using "long vectors" (i.e. 64 bit indices vectors) in CHOLMOD --> cholmod_l_*()
 *** e.g. segfault in crossprod() Csparse_crossprod -> cholmod_att()
 * *Urgent* in some sense ---------------------------------------------------
